Header visibility fix

--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -6,3 +6,7 @@
     
 }
 
+#loginText{
+    color: aliceblue;
+}
+
