--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -7,3 +7,7 @@
     
 }
 
+#registerForm{
+    color: aliceblue;
+}
+
